[project]
name = "DeepHME"
version = "1.1.0"
description = "Heavy Mass Estimator based on deep neural network"
readme = "README.md"
authors = [
    { name = "abolshov", email = "artem.e.bolshov@gmail.com" }
]

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "onnxruntime>=1.22.0",
    "vector>=1.6.3",
    "awkward>=2.8.5",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/DeepHME"]
only-include = [
    "src/DeepHME/*.py", 
    "src/DeepHME/models/**/*"
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/DeepHME",
    "src/DeepHME/models/**/*",
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/cms-flaf/DeepHME"